--- a/Staged/package.json
+++ b/Staged/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+      "body-parser": "~1.16.0",
+      "cookie-parser": "~1.4.3",
+      "debug": "~2.6.0",
+      "express": "~4.14.1",
+      "jade": "~1.11.0",
+      "mongodb": "^2.2.25",
+      "monk": "^4.0.0",
+      "morgan": "~1.7.0",
+      "serve-favicon": "~2.3.2"
   }
 }
