--- a/Staged/package.json
+++ b/Staged/package.json
@@ -6,14 +6,29 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-      "body-parser": "~1.16.0",
-      "cookie-parser": "~1.4.3",
-      "debug": "~2.6.0",
-      "express": "~4.14.1",
-      "jade": "~1.11.0",
-      "mongodb": "^2.2.25",
-      "monk": "^4.0.0",
-      "morgan": "~1.7.0",
-      "serve-favicon": "~2.3.2"
-  }
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "body-parser": "~1.16.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.0",
+    "express": "~4.14.1",
+    "jade": "~1.11.0",
+    "mongodb": "^2.2.25",
+    "monk": "^4.0.0",
+    "morgan": "~1.7.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "serve-favicon": "~2.3.2"
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
