--- a/Staged/package.json
+++ b/Staged/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "serve-favicon": "~2.3.2"
   },
   "main": "app.js",
