--- a/Staged/package.json
+++ b/Staged/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "~1.16.0",
@@ -24,7 +24,8 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "webpack": "^3.5.5"
   },
   "main": "app.js",
   "devDependencies": {},
