--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "body-parser": "~1.16.0",
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.16.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
-    "express": "~4.14.1",
+    "express": "^4.14.1",
+    "express-session": "^1.15.5",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.0.0",
     "mongodb": "^2.2.25",
+    "mongoose": "^4.11.10",
     "monk": "^4.0.0",
-    "morgan": "~1.7.0",
+    "morgan": "^1.7.0",
+    "nodemon": "^1.12.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
@@ -25,9 +31,10 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "serve-favicon": "~2.3.2",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "yarn": "^1.0.0"
   },
-  "main": "app.js",
+  "main": "server.js",
   "devDependencies": {},
   "keywords": [],
   "author": "",
